[tool.poetry]
name = "matching-app"
version = "0.1.0"
description = ""
authors = ["jeremy.fraoua <jeremy.fraoua@qonto.com>"]
readme = "README.md"
packages = [{include = "matching_app"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.24.0"
polars = "^0.18.4"
rapidfuzz = "^3.1.1"
stqdm = "^0.0.5"
xlsxwriter = "^3.1.2"
pandas = "^2.0.3"
xlsx2csv = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
